fix: added 'px' in letter-spacing property

--- a/serasa-challenge/src/app/styles/global.css
+++ b/serasa-challenge/src/app/styles/global.css
@@ -53,28 +53,28 @@ h6 {
 /*Display*/
 h1 {
   font-size: 3rem;
-  letter-spacing: -1.2;
+  letter-spacing: -1.2px;
   line-height: 52px;
 }
 
 /*Heading L*/
 h2 {
   font-size: 2.5rem;
-  letter-spacing: -1;
+  letter-spacing: -1px;
   line-height: 44px;
 }
 
 /*Heading M*/
 h3 {
   font-size: 2rem;
-  letter-spacing: -0.8;
+  letter-spacing: -0.8px;
   line-height: 36px;
 }
 
 /*Heading S*/
 h4 {
   font-size: 1.5rem;
-  letter-spacing: -0.6;
+  letter-spacing: -0.6px;
   line-height: 28px;
 }
 
